Issue #9295: Fix a crash under Windows when calling close() on a file object with custom buffering from two threads at once.